--- a/model_decision_tree.ipynb
+++ b/model_decision_tree.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,20 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"data/randomized/val_data\", \"rb\") as f:\n",
-    "    val_data = pickle.load(f)\n",
-    "\n",
-    "val_features = val_data[0]\n",
-    "val_targets  = val_data[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,22 +76,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DecisionTreeClassifier()"
+       "DecisionTreeClassifier(criterion='entropy')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dt_model = DecisionTreeClassifier()\n",
+    "dt_model = DecisionTreeClassifier(criterion=\"entropy\")\n",
     "\n",
     "shaped_train_features = reshape_to_train(unshaped=train_features)\n",
     "\n",
@@ -120,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,30 +125,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy is 98.96%\n",
+      "The accuracy is 98.81%\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0     1.0000    0.9844    0.9921       128\n",
       "           1     0.9926    0.9926    0.9926       136\n",
-      "           2     0.9926    0.9781    0.9853       137\n",
+      "           2     0.9852    0.9708    0.9779       137\n",
       "           3     0.9910    0.9821    0.9865       112\n",
-      "           4     0.9740    1.0000    0.9868       150\n",
+      "           4     0.9677    1.0000    0.9836       150\n",
       "           5     0.9735    0.9821    0.9778       112\n",
       "           6     1.0000    1.0000    1.0000       166\n",
       "           7     0.9925    1.0000    0.9963       133\n",
       "           8     0.9862    1.0000    0.9931       143\n",
-      "           9     0.9923    0.9699    0.9810       133\n",
+      "           9     0.9922    0.9624    0.9771       133\n",
       "\n",
-      "    accuracy                         0.9896      1350\n",
-      "   macro avg     0.9895    0.9889    0.9892      1350\n",
-      "weighted avg     0.9897    0.9896    0.9896      1350\n",
+      "    accuracy                         0.9881      1350\n",
+      "   macro avg     0.9881    0.9875    0.9877      1350\n",
+      "weighted avg     0.9883    0.9881    0.9881      1350\n",
       "\n"
      ]
     },
@@ -195,9 +182,9 @@
           [
            0,
            135,
-           0,
-           0,
            1,
+           0,
+           0,
            0,
            0,
            0,
@@ -207,9 +194,9 @@
           [
            0,
            0,
-           134,
+           133,
            0,
-           3,
+           4,
            0,
            0,
            0,
@@ -293,12 +280,12 @@
            0,
            0,
            0,
-           0,
+           1,
            3,
            0,
            1,
            0,
-           129
+           128
           ]
          ]
         }
@@ -1202,24 +1189,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "218 µs ± 30.3 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit\n",
-    "dt_model.predict(shaped_test_features)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1239,7 +1208,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('kotoamatsukami-Hq7iVI3N-py3.8')",
+   "display_name": "Python 3.8.8 ('kotoamatsukami-T53X9OZe-py3.8')",
    "language": "python",
    "name": "python3"
   },
@@ -1258,7 +1227,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "36e694ef7c3cc3ea9fcbe33622def963131e2f8f250b2d91c3914ff84d9031bf"
+    "hash": "a51161d7ba46dd3dbd9fc8c6bd348fb23b578d1cf3ae09598f24443a1428645a"
    }
   }
  },
