--- a/model_logisticregression.ipynb
+++ b/model_logisticregression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,20 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"data/randomized/val_data\", \"rb\") as f:\n",
-    "    val_data = pickle.load(f)\n",
-    "\n",
-    "val_features = val_data[0]\n",
-    "val_targets  = val_data[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,71 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0.414, 1.0],\n",
-       " [0.172, 0.829],\n",
-       " [0.276, 0.632],\n",
-       " [0.655, 0.526],\n",
-       " [0.966, 0.461],\n",
-       " [0.0, 0.566],\n",
-       " [0.034, 0.303],\n",
-       " [0.069, 0.158],\n",
-       " [0.069, 0.039],\n",
-       " [0.276, 0.566],\n",
-       " [0.31, 0.303],\n",
-       " [0.31, 0.132],\n",
-       " [0.276, 0.0],\n",
-       " [0.621, 0.592],\n",
-       " [0.828, 0.421],\n",
-       " [0.828, 0.5],\n",
-       " [0.724, 0.579],\n",
-       " [0.931, 0.645],\n",
-       " [1.0, 0.513],\n",
-       " [0.931, 0.566],\n",
-       " [0.862, 0.618]]"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_features[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.414, 1.   , 0.172, 0.829, 0.276, 0.632, 0.655, 0.526, 0.966,\n",
-       "       0.461, 0.   , 0.566, 0.034, 0.303, 0.069, 0.158, 0.069, 0.039,\n",
-       "       0.276, 0.566, 0.31 , 0.303, 0.31 , 0.132, 0.276, 0.   , 0.621,\n",
-       "       0.592, 0.828, 0.421, 0.828, 0.5  , 0.724, 0.579, 0.931, 0.645,\n",
-       "       1.   , 0.513, 0.931, 0.566, 0.862, 0.618])"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "shaped_train_features[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,23 +69,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(max_iter=1000)"
+       "LogisticRegression(max_iter=1000, penalty='none')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# lr_model = LogisticRegressionCV(solver=\"saga\", cv=5, max_iter=1000)\n",
-    "lr_model = LogisticRegression(max_iter=1000)\n",
+    "lr_model = LogisticRegression(penalty=\"none\", max_iter=1000)\n",
     "\n",
     "shaped_train_features = reshape_to_train(unshaped=train_features)\n",
     "\n",
@@ -178,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,30 +119,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy is 99.41%\n",
+      "The accuracy is 98.89%\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0     1.0000    0.9922    0.9961       128\n",
-      "           1     0.9927    1.0000    0.9963       136\n",
-      "           2     0.9856    1.0000    0.9928       137\n",
+      "           1     0.9926    0.9926    0.9926       136\n",
+      "           2     0.9854    0.9854    0.9854       137\n",
       "           3     0.9910    0.9821    0.9865       112\n",
-      "           4     1.0000    0.9933    0.9967       150\n",
-      "           5     0.9821    0.9821    0.9821       112\n",
-      "           6     1.0000    1.0000    1.0000       166\n",
-      "           7     1.0000    1.0000    1.0000       133\n",
+      "           4     0.9868    1.0000    0.9934       150\n",
+      "           5     0.9565    0.9821    0.9692       112\n",
+      "           6     0.9939    0.9880    0.9909       166\n",
+      "           7     1.0000    0.9925    0.9962       133\n",
       "           8     0.9931    1.0000    0.9965       143\n",
-      "           9     0.9924    0.9850    0.9887       133\n",
+      "           9     0.9847    0.9699    0.9773       133\n",
       "\n",
-      "    accuracy                         0.9941      1350\n",
-      "   macro avg     0.9937    0.9935    0.9936      1350\n",
-      "weighted avg     0.9941    0.9941    0.9941      1350\n",
+      "    accuracy                         0.9889      1350\n",
+      "   macro avg     0.9884    0.9885    0.9884      1350\n",
+      "weighted avg     0.9890    0.9889    0.9889      1350\n",
       "\n"
      ]
     },
@@ -252,8 +175,8 @@
           ],
           [
            0,
-           136,
-           0,
+           135,
+           1,
            0,
            0,
            0,
@@ -265,9 +188,9 @@
           [
            0,
            0,
-           137,
+           135,
            0,
-           0,
+           2,
            0,
            0,
            0,
@@ -280,18 +203,18 @@
            0,
            110,
            0,
-           0,
+           1,
            0,
            0,
            1,
-           1
+           0
           ],
           [
            0,
            0,
-           1,
            0,
-           149,
+           0,
+           150,
            0,
            0,
            0,
@@ -317,10 +240,10 @@
            0,
            0,
            0,
-           166,
+           164,
            0,
            0,
-           0
+           2
           ],
           [
            0,
@@ -329,8 +252,8 @@
            0,
            0,
            0,
-           0,
-           133,
+           1,
+           132,
            0,
            0
           ],
@@ -352,11 +275,11 @@
            0,
            0,
            0,
-           2,
+           4,
            0,
            0,
            0,
-           131
+           129
           ]
          ]
         }
@@ -1260,24 +1183,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "263 µs ± 46.7 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit\n",
-    "lr_model.predict(shaped_test_features)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1286,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1202,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('kotoamatsukami-Hq7iVI3N-py3.8')",
+   "display_name": "Python 3.8.8 ('kotoamatsukami-T53X9OZe-py3.8')",
    "language": "python",
    "name": "python3"
   },
@@ -1316,7 +1221,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "36e694ef7c3cc3ea9fcbe33622def963131e2f8f250b2d91c3914ff84d9031bf"
+    "hash": "a51161d7ba46dd3dbd9fc8c6bd348fb23b578d1cf3ae09598f24443a1428645a"
    }
   }
  },
