--- a/model_naive_bayes.ipynb
+++ b/model_naive_bayes.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "GaussianNB()"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,33 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The accuracy is 99.41%\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0     1.0000    0.9922    0.9961       128\n",
-      "           1     0.9927    1.0000    0.9963       136\n",
-      "           2     0.9856    1.0000    0.9928       137\n",
-      "           3     0.9910    0.9821    0.9865       112\n",
-      "           4     1.0000    0.9933    0.9967       150\n",
-      "           5     0.9821    0.9821    0.9821       112\n",
-      "           6     1.0000    1.0000    1.0000       166\n",
-      "           7     1.0000    1.0000    1.0000       133\n",
-      "           8     0.9931    1.0000    0.9965       143\n",
-      "           9     0.9924    0.9850    0.9887       133\n",
-      "\n",
-      "    accuracy                         0.9941      1350\n",
-      "   macro avg     0.9937    0.9935    0.9936      1350\n",
-      "weighted avg     0.9941    0.9941    0.9941      1350\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -288,39 +264,63 @@
          "colorscale": [
           [
            0,
-           "rgb(247,251,255)"
+           "#30123b"
           ],
           [
-           0.125,
-           "rgb(222,235,247)"
+           0.07142857142857142,
+           "#4145ab"
           ],
           [
-           0.25,
-           "rgb(198,219,239)"
+           0.14285714285714285,
+           "#4675ed"
           ],
           [
-           0.375,
-           "rgb(158,202,225)"
+           0.21428571428571427,
+           "#39a2fc"
+          ],
+          [
+           0.2857142857142857,
+           "#1bcfd4"
+          ],
+          [
+           0.35714285714285715,
+           "#24eca6"
+          ],
+          [
+           0.42857142857142855,
+           "#61fc6c"
           ],
           [
            0.5,
-           "rgb(107,174,214)"
+           "#a4fc3b"
           ],
           [
-           0.625,
-           "rgb(66,146,198)"
+           0.5714285714285714,
+           "#d1e834"
           ],
           [
-           0.75,
-           "rgb(33,113,181)"
+           0.6428571428571429,
+           "#f3c63a"
           ],
           [
-           0.875,
-           "rgb(8,81,156)"
+           0.7142857142857143,
+           "#fe9b2d"
+          ],
+          [
+           0.7857142857142857,
+           "#f36315"
+          ],
+          [
+           0.8571428571428571,
+           "#d93806"
+          ],
+          [
+           0.9285714285714286,
+           "#b11901"
           ],
           [
            1,
-           "rgb(8,48,107)"
+           "#7a0402"
           ]
          ]
         },
@@ -1173,12 +1173,12 @@
     "acc = accuracy_score(y_true=test_targets, y_pred=predictions)\n",
     "accuracy = round(acc, 4)\n",
     "\n",
-    "print(f\"The accuracy is {round(accuracy*100, 4)}%\")\n",
+    "# print(f\"The accuracy is {round(accuracy*100, 4)}%\")\n",
     "\n",
-    "print(classification_report(y_true=test_targets, y_pred=predictions, digits=4))\n",
+    "# print(classification_report(y_true=test_targets, y_pred=predictions, digits=4))\n",
     "\n",
     "conf_matrix = confusion_matrix(y_true=test_targets, y_pred=predictions)\n",
-    "px.imshow(conf_matrix, color_continuous_scale=\"blues\")"
+    "px.imshow(conf_matrix, color_continuous_scale=\"turbo\")"
    ]
   },
   {
@@ -1190,7 +1190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.66 ms ± 47.2 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "3.75 ms ± 1.15 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -1219,7 +1219,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('kotoamatsukami-Hq7iVI3N-py3.8')",
+   "display_name": "Python 3.8.8 ('kotoamatsukami-T53X9OZe-py3.8')",
    "language": "python",
    "name": "python3"
   },
@@ -1238,7 +1238,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "36e694ef7c3cc3ea9fcbe33622def963131e2f8f250b2d91c3914ff84d9031bf"
+    "hash": "a51161d7ba46dd3dbd9fc8c6bd348fb23b578d1cf3ae09598f24443a1428645a"
    }
   }
  },
