--- a/model_randomforest.ipynb
+++ b/model_randomforest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,19 +32,6 @@
     "\n",
     "train_features = train_data[0]\n",
     "train_targets  = train_data[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"data/randomized/val_data\", \"rb\") as f:\n",
-    "    val_data = pickle.load(f)\n",
-    "\n",
-    "val_features = val_data[0]\n",
-    "val_targets  = val_data[1]"
    ]
   },
   {
@@ -88,7 +75,7 @@
     {
      "data": {
       "text/plain": [
-       "RandomForestClassifier()"
+       "RandomForestClassifier(bootstrap=False)"
       ]
      },
      "execution_count": 6,
@@ -97,7 +84,7 @@
     }
    ],
    "source": [
-    "rf_model = RandomForestClassifier()\n",
+    "rf_model = RandomForestClassifier(bootstrap=False)\n",
     "\n",
     "shaped_train_features = reshape_to_train(unshaped=train_features)\n",
     "\n",
@@ -131,33 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The accuracy is 99.56%\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0     1.0000    0.9922    0.9961       128\n",
-      "           1     0.9927    1.0000    0.9963       136\n",
-      "           2     0.9928    1.0000    0.9964       137\n",
-      "           3     0.9910    0.9821    0.9865       112\n",
-      "           4     1.0000    1.0000    1.0000       150\n",
-      "           5     0.9910    0.9821    0.9865       112\n",
-      "           6     1.0000    1.0000    1.0000       166\n",
-      "           7     1.0000    1.0000    1.0000       133\n",
-      "           8     0.9931    1.0000    0.9965       143\n",
-      "           9     0.9925    0.9925    0.9925       133\n",
-      "\n",
-      "    accuracy                         0.9956      1350\n",
-      "   macro avg     0.9953    0.9949    0.9951      1350\n",
-      "weighted avg     0.9956    0.9956    0.9955      1350\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -174,7 +137,7 @@
          "yaxis": "y",
          "z": [
           [
-           127,
+           126,
            0,
            1,
            0,
@@ -182,7 +145,7 @@
            0,
            0,
            0,
-           0,
+           1,
            0
           ],
           [
@@ -301,39 +264,63 @@
          "colorscale": [
           [
            0,
-           "rgb(247,251,255)"
+           "#30123b"
           ],
           [
-           0.125,
-           "rgb(222,235,247)"
+           0.07142857142857142,
+           "#4145ab"
           ],
           [
-           0.25,
-           "rgb(198,219,239)"
+           0.14285714285714285,
+           "#4675ed"
           ],
           [
-           0.375,
-           "rgb(158,202,225)"
+           0.21428571428571427,
+           "#39a2fc"
+          ],
+          [
+           0.2857142857142857,
+           "#1bcfd4"
+          ],
+          [
+           0.35714285714285715,
+           "#24eca6"
+          ],
+          [
+           0.42857142857142855,
+           "#61fc6c"
           ],
           [
            0.5,
-           "rgb(107,174,214)"
+           "#a4fc3b"
           ],
           [
-           0.625,
-           "rgb(66,146,198)"
+           0.5714285714285714,
+           "#d1e834"
           ],
           [
-           0.75,
-           "rgb(33,113,181)"
+           0.6428571428571429,
+           "#f3c63a"
           ],
           [
-           0.875,
-           "rgb(8,81,156)"
+           0.7142857142857143,
+           "#fe9b2d"
+          ],
+          [
+           0.7857142857142857,
+           "#f36315"
+          ],
+          [
+           0.8571428571428571,
+           "#d93806"
+          ],
+          [
+           0.9285714285714286,
+           "#b11901"
           ],
           [
            1,
-           "rgb(8,48,107)"
+           "#7a0402"
           ]
          ]
         },
@@ -1186,30 +1173,12 @@
     "acc = accuracy_score(y_true=test_targets, y_pred=predictions)\n",
     "accuracy = round(acc, 4)\n",
     "\n",
-    "print(f\"The accuracy is {round(accuracy*100, 4)}%\")\n",
+    "# print(f\"The accuracy is {round(accuracy*100, 4)}%\")\n",
     "\n",
-    "print(classification_report(y_true=test_targets, y_pred=predictions, digits=4))\n",
+    "# print(classification_report(y_true=test_targets, y_pred=predictions, digits=4))\n",
     "\n",
     "conf_matrix = confusion_matrix(y_true=test_targets, y_pred=predictions)\n",
-    "px.imshow(conf_matrix, color_continuous_scale=\"blues\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16.1 ms ± 2 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit\n",
-    "rf_model.predict(shaped_test_features)"
+    "px.imshow(conf_matrix, color_continuous_scale=\"turbo\")"
    ]
   },
   {
@@ -1221,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1201,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('kotoamatsukami-Hq7iVI3N-py3.8')",
+   "display_name": "Python 3.8.8 ('kotoamatsukami-T53X9OZe-py3.8')",
    "language": "python",
    "name": "python3"
   },
@@ -1251,7 +1220,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "36e694ef7c3cc3ea9fcbe33622def963131e2f8f250b2d91c3914ff84d9031bf"
+    "hash": "a51161d7ba46dd3dbd9fc8c6bd348fb23b578d1cf3ae09598f24443a1428645a"
    }
   }
  },
