--- a/model_svm.ipynb
+++ b/model_svm.ipynb
@@ -40,19 +40,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"data/randomized/val_data\", \"rb\") as f:\n",
-    "    val_data = pickle.load(f)\n",
-    "\n",
-    "val_features = val_data[0]\n",
-    "val_targets  = val_data[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "with open(\"data/randomized/test_data\", \"rb\") as f:\n",
     "    test_data = pickle.load(f)\n",
     "\n",
@@ -69,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,22 +69,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SVC()"
+       "SVC(kernel='sigmoid', shrinking=False)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "svc_model = SVC()\n",
+    "svc_model = SVC(kernel=\"sigmoid\", shrinking=False)\n",
     "\n",
     "shaped_train_features = reshape_to_train(unshaped=train_features)\n",
     "\n",
@@ -113,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,30 +118,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy is 99.41%\n",
+      "The accuracy is 64.89%\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0     1.0000    0.9922    0.9961       128\n",
-      "           1     0.9927    1.0000    0.9963       136\n",
-      "           2     0.9856    1.0000    0.9928       137\n",
-      "           3     0.9910    0.9821    0.9865       112\n",
-      "           4     1.0000    0.9933    0.9967       150\n",
-      "           5     0.9821    0.9821    0.9821       112\n",
+      "           0     0.9767    0.9844    0.9805       128\n",
+      "           1     0.3434    1.0000    0.5113       136\n",
+      "           2     0.9762    0.2993    0.4581       137\n",
+      "           3     0.3000    0.0268    0.0492       112\n",
+      "           4     0.4645    0.9600    0.6261       150\n",
+      "           5     0.5263    0.1786    0.2667       112\n",
       "           6     1.0000    1.0000    1.0000       166\n",
-      "           7     1.0000    1.0000    1.0000       133\n",
-      "           8     0.9931    1.0000    0.9965       143\n",
-      "           9     0.9924    0.9850    0.9887       133\n",
+      "           7     0.9143    0.4812    0.6305       133\n",
+      "           8     0.9167    1.0000    0.9565       143\n",
+      "           9     1.0000    0.2481    0.3976       133\n",
       "\n",
-      "    accuracy                         0.9941      1350\n",
-      "   macro avg     0.9937    0.9935    0.9936      1350\n",
-      "weighted avg     0.9941    0.9941    0.9941      1350\n",
+      "    accuracy                         0.6489      1350\n",
+      "   macro avg     0.7418    0.6178    0.5877      1350\n",
+      "weighted avg     0.7551    0.6489    0.6123      1350\n",
       "\n"
      ]
     },
@@ -174,10 +161,10 @@
          "yaxis": "y",
          "z": [
           [
-           127,
-           0,
+           126,
            1,
            0,
+           1,
            0,
            0,
            0,
@@ -199,34 +186,10 @@
           ],
           [
            0,
-           0,
-           137,
-           0,
-           0,
+           96,
+           41,
            0,
            0,
-           0,
-           0,
-           0
-          ],
-          [
-           0,
-           0,
-           0,
-           110,
-           0,
-           0,
-           0,
-           0,
-           1,
-           1
-          ],
-          [
-           0,
-           0,
-           1,
-           0,
-           149,
            0,
            0,
            0,
@@ -234,15 +197,39 @@
            0
           ],
           [
+           3,
+           98,
+           0,
+           3,
+           1,
+           0,
+           0,
+           6,
+           1,
+           0
+          ],
+          [
+           0,
            0,
            1,
            0,
+           144,
+           4,
+           0,
+           0,
            1,
+           0
+          ],
+          [
            0,
-           110,
+           2,
            0,
            0,
+           89,
+           20,
            0,
+           0,
+           1,
            0
           ],
           [
@@ -259,13 +246,13 @@
           ],
           [
            0,
+           63,
+           0,
+           6,
            0,
            0,
            0,
-           0,
-           0,
-           0,
-           133,
+           64,
            0,
            0
           ],
@@ -286,12 +273,12 @@
            0,
            0,
            0,
+           76,
+           14,
            0,
-           2,
            0,
-           0,
-           0,
-           131
+           10,
+           33
           ]
          ]
         }
@@ -1195,24 +1182,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "41.1 ms ± 1.58 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit\n",
-    "svc_model.predict(shaped_test_features)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1221,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1201,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('kotoamatsukami-Hq7iVI3N-py3.8')",
+   "display_name": "Python 3.8.8 ('kotoamatsukami-T53X9OZe-py3.8')",
    "language": "python",
    "name": "python3"
   },
@@ -1251,7 +1220,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "36e694ef7c3cc3ea9fcbe33622def963131e2f8f250b2d91c3914ff84d9031bf"
+    "hash": "a51161d7ba46dd3dbd9fc8c6bd348fb23b578d1cf3ae09598f24443a1428645a"
    }
   }
  },
