--- a/model_xgboost.ipynb
+++ b/model_xgboost.ipynb
@@ -40,19 +40,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"data/randomized/val_data\", \"rb\") as f:\n",
-    "    val_data = pickle.load(f)\n",
-    "\n",
-    "val_features = val_data[0]\n",
-    "val_targets  = val_data[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "with open(\"data/randomized/test_data\", \"rb\") as f:\n",
     "    test_data = pickle.load(f)\n",
     "\n",
@@ -69,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +87,7 @@
        "              predictor='auto', random_state=0, reg_alpha=0, ...)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,33 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The accuracy is 99.33%\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0     1.0000    0.9844    0.9921       128\n",
-      "           1     0.9927    1.0000    0.9963       136\n",
-      "           2     0.9856    1.0000    0.9928       137\n",
-      "           3     0.9821    0.9821    0.9821       112\n",
-      "           4     1.0000    0.9933    0.9967       150\n",
-      "           5     0.9910    0.9821    0.9865       112\n",
-      "           6     0.9940    1.0000    0.9970       166\n",
-      "           7     1.0000    0.9925    0.9962       133\n",
-      "           8     0.9931    1.0000    0.9965       143\n",
-      "           9     0.9925    0.9925    0.9925       133\n",
-      "\n",
-      "    accuracy                         0.9933      1350\n",
-      "   macro avg     0.9931    0.9927    0.9929      1350\n",
-      "weighted avg     0.9934    0.9933    0.9933      1350\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -310,39 +273,63 @@
          "colorscale": [
           [
            0,
-           "rgb(247,251,255)"
+           "#30123b"
           ],
           [
-           0.125,
-           "rgb(222,235,247)"
+           0.07142857142857142,
+           "#4145ab"
           ],
           [
-           0.25,
-           "rgb(198,219,239)"
+           0.14285714285714285,
+           "#4675ed"
           ],
           [
-           0.375,
-           "rgb(158,202,225)"
+           0.21428571428571427,
+           "#39a2fc"
+          ],
+          [
+           0.2857142857142857,
+           "#1bcfd4"
+          ],
+          [
+           0.35714285714285715,
+           "#24eca6"
+          ],
+          [
+           0.42857142857142855,
+           "#61fc6c"
           ],
           [
            0.5,
-           "rgb(107,174,214)"
+           "#a4fc3b"
           ],
           [
-           0.625,
-           "rgb(66,146,198)"
+           0.5714285714285714,
+           "#d1e834"
           ],
           [
-           0.75,
-           "rgb(33,113,181)"
+           0.6428571428571429,
+           "#f3c63a"
           ],
           [
-           0.875,
-           "rgb(8,81,156)"
+           0.7142857142857143,
+           "#fe9b2d"
+          ],
+          [
+           0.7857142857142857,
+           "#f36315"
+          ],
+          [
+           0.8571428571428571,
+           "#d93806"
+          ],
+          [
+           0.9285714285714286,
+           "#b11901"
           ],
           [
            1,
-           "rgb(8,48,107)"
+           "#7a0402"
           ]
          ]
         },
@@ -1195,30 +1182,12 @@
     "acc = accuracy_score(y_true=test_targets, y_pred=predictions)\n",
     "accuracy = round(acc, 4)\n",
     "\n",
-    "print(f\"The accuracy is {round(accuracy*100, 4)}%\")\n",
+    "# print(f\"The accuracy is {round(accuracy*100, 4)}%\")\n",
     "\n",
-    "print(classification_report(y_true=test_targets, y_pred=predictions, digits=4))\n",
+    "# print(classification_report(y_true=test_targets, y_pred=predictions, digits=4))\n",
     "\n",
     "conf_matrix = confusion_matrix(y_true=test_targets, y_pred=predictions)\n",
-    "px.imshow(conf_matrix, color_continuous_scale=\"blues\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.92 ms ± 300 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit\n",
-    "xgb_model.predict(shaped_test_features)"
+    "px.imshow(conf_matrix, color_continuous_scale=\"turbo\")"
    ]
   },
   {
@@ -1230,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1241,7 +1210,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('kotoamatsukami-Hq7iVI3N-py3.8')",
+   "display_name": "Python 3.8.8 ('kotoamatsukami-T53X9OZe-py3.8')",
    "language": "python",
    "name": "python3"
   },
@@ -1260,7 +1229,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "36e694ef7c3cc3ea9fcbe33622def963131e2f8f250b2d91c3914ff84d9031bf"
+    "hash": "a51161d7ba46dd3dbd9fc8c6bd348fb23b578d1cf3ae09598f24443a1428645a"
    }
   }
  },
